--- a/oauth2-proxy/config/oauth2-proxy.cfg
+++ b/oauth2-proxy/config/oauth2-proxy.cfg
@@ -3,7 +3,6 @@ cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
 email_domains="example.com"
 cookie_secure="false"
 upstreams="http://host.docker.internal:8080"
-skip_auth_routes="GET=^/actuator.*,GET=^/demo/oauth2-proxy/skip-auth-routes/.*"
 cookie_domains=["oauth2-proxy.localtest.me:4080", "keycloak.localtest.me:9080"] # Required so cookie can be read on all subdomains.
 whitelist_domains=[".localtest.me"] # Required to allow redirection back to original requested target.
 
@@ -17,3 +16,10 @@ redirect_url="http://oauth2-proxy.localtest.me:4180/oauth2/callback"
 oidc_issuer_url="http://keycloak.localtest.me:9080/realms/oauth2-proxy"
 provider="oidc"
 provider_display_name="Keycloak"
+
+skip_jwt_bearer_tokens="true"
+oidc_extra_audiences="oauth2-proxy-realm"
+
+api_routes="^/.*/api/.*"
+
+oidc_groups_claim="resource_access.oauth2-proxy-realm.roles"
